--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Hyperbole and a Half: Unfortunate Situations, Flawed Coping Mechanisms, Mayhem, and Other Things That Happened</h5>
+                                    <h5 class="fw-bolder">Hyperbole and a Half</h5>
                                     <!-- Product price-->
                                     Book by Allie Brosh
                                 </div>
